# dapla-statbank-client

./: .bumpversion.cfg  .cookiecutter.json  .cruft.json  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  DEV_README.md  README.md  SECURITY.md  noxfile.py  pyproject.toml  sonar-project.properties
.github/workflows/: docs.yml  labeler.yml  pytest.yml  release.yml  tests.yml
demo/: 01_enkleste_bruk.ipynb  01_enkleste_bruk.py  02_bruke_filbeskrivelse.ipynb  02_bruke_filbeskrivelse.py  03629_hentogsend.ipynb  03629_hentogsend.py  03_alleparametre_datewidget.ipynb  03_alleparametre_datewidget.py  04_hent_publisertdata.ipynb  214_mnr.ipynb  214_mnr_hentogsend.ipynb  214_mnr_hentogsend.py  312_stillnaring.ipynb  312_stillnaring_csv.ipynb  312_stillnaring_csv.py  312_stillnaring_fellesdaplalagring.ipynb  312_stillnaring_fellesdaplalagring.py  312_stillnaring_rachel.ipynb  check_auth_response.ipynb  check_dependencies.ipynb  check_env_changes.ipynb  fillna_dict_dev.ipynb  test_statbank_client-Copy1.ipynb  test_statbank_client.ipynb
docs/: conf.py  index.md  reference.md
src/dapla/: __init__.py  __main__.py
src/statbank/: __init__.py  api_exceptions.py  api_types.py  apidata.py  auth.py  client.py  get_apidata.py  globals.py  logger.py  netrc.py  response_to_pandas.py  statbank_logger.py  transfer.py  uttrekk.py  uttrekk_validations.py
statbank/: __init__.py  apidata.py  auth.py  batchtransfer.py  client.py  transfer.py  uttrekk.py  uttrekk_validations.py
tests/: __init__.py  conftest.py  test_api_exceptions.py  test_apidata.py  test_auth.py  test_conf.py  test_globals.py  test_integration_dapla.py  test_netrc.py  test_statbank.py  test_suppression_ignore.py
utils/: __init__.py  check_if_nox_poetry_is_outdated.py
