[tool.poetry]
name = "dapla-statbank-client"
version = "0.0.1"
description = "Handles data transfer Statbank <-> Dapla for Statistics Norway"
authors = ["Statistics Norway", "Carl F. Corneil <cfc@ssb.no>"]
license = "MIT"
readme = "README.md"
packages = [{include = "statbank"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.0"
dapla-toolbelt = "^1.3.3"
requests = "^2.28.1"
pyjstat = "^2.3.0"
ipywidgets = "^8.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
